web/src/styles/authentik/components/Form/form.css
/* ... */
/* #endregion */

/* #region Radio */

.pf-c-radio {
    align-content: start;
}

label.pf-c-radio {
    --pf-c-radio--checkmark--BorderColor: var(--pf-global--BorderColor--300);
    --pf-c-radio--checkmark--Color: transparent;
    --pf-c-radio--BorderColor: transparent;
    --pf-c-radio--BoxShadowColor: transparent;

    --pf-c-radio--checked--BackgroundColor: transparent;
    --pf-c-radio--checked--BorderColor: var(--pf-global--active-color--300);
    --pf-c-radio--hover--BorderColor: var(--pf-global--active-color--200);

    --pf-c-radio--disabled--BackgroundColor: var(--pf-global--BackgroundColor--150);
    transition:
        border-color 0.2s,
        color 0.2s;

    padding-inline: var(--pf-global--spacer--md);
    padding-block: var(--pf-global--spacer--sm);
    cursor: pointer;
    background-color: var(--pf-c-radio--BackgroundColor, transparent);
    border: 1px solid var(--pf-c-radio--BorderColor);
    border-radius: var(--pf-global--BorderRadius--sm);
    position: relative;

    align-content: center;
    display: grid;
    grid-template-areas:
        "input ."
        "input .";
    grid-template-columns: auto 1fr;
    column-gap: var(--pf-global--spacer--md);

    .pf-c-radio__input {
        grid-area: input;
        align-self: center;
        margin-block: 0;
        margin-inline-end: var(--pf-global--spacer--xs);
        margin-inline-start: var(--pf-global--spacer--sm);
        appearance: none;
        content: none;

        width: 1.5em;
        height: 1.5em;
        padding: 0.25em;
        border: 1px solid;
        color: var(--pf-c-radio--checkmark--BorderColor, transparent);
        border-radius: 3px;
        display: flex;
        justify-content: center;
        align-items: center;
        z-index: 1;

        &::after {
            font-family: "Font Awesome 5 Free";
            font-weight: 900;

            content: "\f00c";
            display: block;
            line-height: 1;
            color: var(--pf-c-radio--checkmark--Color);
            transition: color 0.2s;
        }
    }

    &:not(:last-child) {
        --pf-c-radio--BoxShadowColor: var(--pf-global--BorderColor--100);
    }

    &::after {
        content: "";
        position: absolute;
        display: block;
        background-color: var(--pf-c-radio--BoxShadowColor);
        height: 0.5px;
        inset-inline: 0;
        inset-block-end: 0;
    }

    &:has(.pf-c-radio__input:checked:not(:disabled)) {
        --pf-c-radio--BackgroundColor: var(--pf-c-radio--checked--BackgroundColor);
        --pf-c-radio--BorderColor: var(--pf-c-radio--checked--BorderColor);
        --pf-c-radio--checkmark--BorderColor: var(--pf-global--active-color--300);
        --pf-c-radio--checkmark--Color: var(--pf-c-radio--checked--BorderColor);
    }

    &:hover:not(:has(.pf-c-radio__input:checked)):not(:has(.pf-c-radio__input:disabled)) {
        --pf-c-radio--checkmark--BorderColor: var(--pf-c-radio--hover--BorderColor);
        --pf-c-radio--checkmark--Color: var(--pf-c-radio--hover--BorderColor);
    }

    &:has(.pf-c-radio__input:disabled) {
        cursor: not-allowed;

        --pf-c-radio--BackgroundColor: var(--pf-c-radio--disabled--BackgroundColor) !important;
    }
}

.pf-c-form__helper-radio:first-child {
    margin-block-end: var(--pf-global--spacer--sm);
    line-height: 1;
}

::part(radio-help) {
    padding-block-start: var(--pf-c-form--m-horizontal__group-label--md--PaddingTop);
    font-size: var(--pf-c-form__label--FontSize);
    line-height: var(--pf-c-form__label--LineHeight);
}

/* #endregion */

ak-switch-input {
    padding-inline: var(--pf-global--spacer--form-element);
    ::part(group-control) {
        grid-area: control;
    }

    .pf-c-switch {
        grid-template-columns: [label] auto [control] auto;
        grid-template-rows: [primary] auto [secondary] auto;
        justify-content: start;
        padding-block: var(--pf-global--spacer--xs);
        width: 100%;
        column-gap: var(--pf-global--spacer--sm);
    }

    .pf-c-switch__label {
        grid-area: primary / label;
        justify-self: start;
        font-weight: 500;
    }

    .pf-c-switch__input,
    .pf-c-switch__toggle {
        grid-area: primary / control;
        justify-self: end;
    }

    .pf-c-form__helper-text {
        padding-inline-end: var(--pf-global--spacer--2xl);
        grid-area: secondary / label / secondary / -1;
    }
}
/* ... */

